# stb_edittext-sdl3-bgfx

./: CMakeLists.txt  main.cpp  vcpkg-configuration.json
shaders/: fs_msdf.sh  fs_textured.sh  varying.def.sc  vs_simple.sh  vs_textured.sh
vcpkg-ports/msdf-atlas-gen/: portfile.cmake  vcpkg.json
